<resources>
    <string name="app_name">NEA</string>
    <string name="queryButton">Query</string>
    <string name="text_message">Fetching data from network</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="loginbutton">Login</string>
    <string name="enter_pass_edittext">Enter Password</string>
    <string name="enter_user_edittext">Enter Username</string>
    <string name="enter_user_edittext2">Enter Time or latest</string>
    <string name="start_title">Nea\nProject</string>
    <string name="json">Result</string>
</resources>
