<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sahil.nea.Login">

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_pass_edittext"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_user_edittext"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/loginbutton"
        android:textColor="@color/colorPrimary"
        android:id="@+id/button2"
        android:background="@color/colorAccent"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:onClick="login"/>

</RelativeLayout>
