<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sahil.nea.MainActivity"
    >

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
         
        android:hint="@string/enter_user_edittext2"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_gravity="center_horizontal"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/queryButton"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="fetch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/json"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:id="@+id/textView3"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:onClick="login"/>



</LinearLayout>
